--- a/index.html
+++ b/index.html
@@ -6,21 +6,16 @@
 <title>???</title>
 
 <style>
-*{
-  margin:0;
-  padding:0;
-  box-sizing:border-box;
-}
+*{margin:0;padding:0;box-sizing:border-box;}
 
 body{
   font-family:'Courier New', monospace;
   background:#000;
   min-height:100vh;
-  overflow:hidden;
-  position:relative;
+  overflow-y:auto;
 }
 
-/* ===== GRAIN ===== */
+/* Grain */
 body::before{
   content:'';
   position:fixed;
@@ -28,7 +23,6 @@ body::before{
   background-image:url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" width="300" height="300"><filter id="n"><feTurbulence type="fractalNoise" baseFrequency="1.9" numOctaves="5"/></filter><rect width="300" height="300" filter="url(%23n)"/></svg>');
   opacity:.25;
   pointer-events:none;
-  z-index:9999;
   animation:grain .2s steps(4) infinite;
 }
 @keyframes grain{
@@ -38,27 +32,27 @@ body::before{
   75%{transform:translate(-1%,1%)}
 }
 
-/* ===== VIGNETTE ===== */
+/* Vignette */
 body::after{
   content:'';
   position:fixed;
   inset:0;
   box-shadow:inset 0 0 300px 120px rgba(0,0,0,.95);
   pointer-events:none;
-  z-index:9998;
 }
 
 .container{
-  width:100%;
-  height:100vh;
-  position:relative;
+  min-height:120vh; /* erlaubt Scroll */
   display:flex;
+  flex-direction:column;
   justify-content:center;
   align-items:center;
+  gap:40px;
+  padding:40px 0;
 }
 
-/* ===== START BUTTON ===== */
-#startBtn{
+/* Buttons */
+button{
   padding:18px 40px;
   background:#140f0c;
   color:#9a9a9a;
@@ -66,27 +60,29 @@ body::after{
   letter-spacing:4px;
   text-transform:uppercase;
   cursor:pointer;
-  z-index:10;
 }
 
-/* ===== SCENE ===== */
+#restartBtn{
+  display:none;
+}
+
+/* Scene */
 .scene{
   display:none;
   width:100%;
-  height:100%;
   justify-content:center;
   align-items:center;
-  gap:100px;
+  gap:80px;
 }
 .scene.active{display:flex}
 
-/* ===== BOOK ===== */
+/* Book */
 .book-container{perspective:1200px}
 
 .book{
-  position:relative;
   width:450px;
   height:550px;
+  position:relative;
   transform-style:preserve-3d;
 }
 
@@ -105,27 +101,22 @@ body::after{
   position:absolute;
   inset:0;
   background:linear-gradient(135deg,#f5f0e6,#d7cdbc);
-  padding:50px;
+  padding:40px;
   transition:opacity .6s;
 }
 
-.book.closed .book-pages{
-  opacity:0;
-  pointer-events:none;
-}
-.book.open .book-pages{
-  opacity:1;
-}
+.book.closed .book-pages{opacity:0;pointer-events:none}
+.book.open .book-pages{opacity:1}
 
 .note-text{
   font-family:Georgia, serif;
-  font-size:18px;
-  line-height:2;
+  font-size:17px;
+  line-height:1.9;
   color:#2a2520;
   white-space:pre-line;
 }
 
-/* ===== LAMP ===== */
+/* Lamp */
 .lamp-bulb{
   width:50px;
   height:50px;
@@ -137,35 +128,19 @@ body::after{
   box-shadow:0 0 80px rgba(255,230,120,.9);
 }
 
-/* ================================================= */
-/* ================= MOBILE FIX =================== */
-/* ================================================= */
-@media (max-width: 768px){
-
-  body{
-    overflow:auto;
-  }
-
+/* Mobile */
+@media(max-width:768px){
   .scene.active{
     flex-direction:column;
     gap:30px;
-    padding:20px 0;
   }
-
   .book{
     width:90vw;
     height:auto;
   }
-
-  .book-pages{
-    padding:25px;
-  }
-
   .note-text{
     font-size:15px;
-    line-height:1.7;
   }
-
 }
 </style>
 </head>
@@ -174,6 +149,7 @@ body::after{
 
 <div class="container">
   <button id="startBtn">Rätsel starten</button>
+  <button id="restartBtn">Rätsel erneut öffnen</button>
 
   <div class="scene" id="scene">
     <div class="book-container">
@@ -206,7 +182,6 @@ const morse={
   N:'-.',E:'.',I:'..',L:'.-..',
   A:'.-',B:'-...',U:'..-',T:'-'
 };
-
 const message="NEIL LABUTE";
 
 function wait(ms){return new Promise(r=>setTimeout(r,ms));}
@@ -214,7 +189,7 @@ function wait(ms){return new Promise(r=>setTimeout(r,ms));}
 async function playMorse(){
   const bulb=document.getElementById('bulb');
   for(const c of message){
-    if(c===' '){await wait(1400);continue;}
+    if(c===' '){await wait(1200);continue;}
     for(const s of morse[c]){
       bulb.classList.add('on');
       await wait(s==='.'?200:600);
@@ -225,24 +200,33 @@ async function playMorse(){
   }
 }
 
-document.getElementById('startBtn').onclick=async function(){
-  if(finished)return;
+async function startRiddle(){
+  finished=false;
+  document.getElementById('restartBtn').style.display='none';
 
-  this.style.display='none';
   const scene=document.getElementById('scene');
   const book=document.getElementById('book');
 
   scene.classList.add('active');
-
-  setTimeout(()=>book.classList.replace('closed','open'),600);
+  book.classList.replace('closed','open');
 
   await wait(2000);
   await playMorse();
 
-  setTimeout(()=>{
-    finished=true;
-    book.classList.replace('open','closed');
-  },800);
+  await wait(800);
+  book.classList.replace('open','closed');
+  finished=true;
+
+  document.getElementById('restartBtn').style.display='block';
+}
+
+document.getElementById('startBtn').onclick=function(){
+  this.style.display='none';
+  startRiddle();
+};
+
+document.getElementById('restartBtn').onclick=function(){
+  startRiddle();
 };
 </script>
 
