--- a/index.html
+++ b/index.html
@@ -155,9 +155,9 @@ button{
         <div class="book-pages">
           <div class="note-text">
 Dort, wo Bücher keinen Besitzer haben.
-Wo man nimmt, um zu geben.
-Vierundzwanzig Stunden.
-Ein Quadratmeter.
+Wo man nimmt, und auch gibt.
+24/7.
+Ein Quadratmeter und Grün.
 
 Du brauchst einen Namen.
 
@@ -229,3 +229,4 @@ document.getElementById('restartBtn').onclick=function(){
 
 </body>
 </html>
+
